# anaconda_training

./: README.md  deck1.pptx  pyproject.toml
.github/workflows/: test.yml
data/reference-data/: create-table.sql
data/sql/: query_get_active_funds_cfg.sql  query_get_pub_funds_equities_data.sql  query_get_pub_reference_data.sql  query_get_raw_reference_data.sql
outputs/: equities_recon_report.xlsx  funds_perf_report.xlsx
src/: main.py
src/app/: config.py  main.py
src/app/etl/: generate_perf_report.py  generate_recon_report.py  ingest_external_data.py  pre_process_data.py  publish_data.py
src/base/: base_model.py
src/config/: constants.py  settings.py
src/db/: db_setup.py
src/helpers/: db_utils.py  logger.py  utils.py
tests/: conftest.py  test_utils.py
